Fixing Bug 195228:Cards have too much space on top (now: Margins are screwed up)

--- a/src/Orchard.Web/Modules/Devoffice.GettingStarted/Styles/gettingStarted.css
+++ b/src/Orchard.Web/Modules/Devoffice.GettingStarted/Styles/gettingStarted.css
@@ -195,7 +195,10 @@ samp {
     background-color: white !important;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
     border: 1px solid #ddd;
 }
 
@@ -205,7 +208,10 @@ samp {
     background-color: white !important;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 40px;
+    padding-top: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
     border: 1px solid #ddd;
 }
 
